--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,6 +1,6 @@
 .main-container{
-    width:100%;
-    height:30rem;
+    width:90%;
+    height:47rem;
     background-color: black;
     border-radius: 1rem;
     /* margin: 0; */
@@ -91,19 +91,30 @@
 .main-Tablecontent{
     width:45%;
     height: 2rem;
-    top:33rem;
+    top:25rem;
     position: relative;
 }
 .tableStyles{
     width:70rem;
-    height: 21vh;
-    margin-left: 0.3rem;
+    height: 40vh;
+    margin-left: 2.3rem;
+    background-color: #1c201f;
 }
 .table-content{
     margin-left: 6rem;
+    border-radius: 1.2rem;
+    
 }
-.table-data{
+.tableStyles tr{
+    border-radius: 1.2rem;
+}
+
+td{
     margin-left: 0.6rem;
-    font-size: 4.4rem;
-    padding-right: 50rem;
+    font-size: 1.4rem;
+    padding-right: 1.2rem;
+    background-color: #1c201f;
+    border-bottom:0.1rem solid #4e5139;
+    color: white;
+
 }
