--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -51,9 +51,11 @@
     border: 0.1rem solid #6f734c;
     margin-left: 0.4rem;
     border-radius: 1.2rem;
-    width:12rem;
+    width:10rem;
     text-transform: capitalize;
     padding-top: 0.4rem;
+    /* background-color: black;
+    border-style: none; */
 }
 .button-container{
     margin-top: 0.8rem;
