modified the inputs for tasks

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -74,6 +74,8 @@
     border-radius: 1.2rem;
     width: 14rem;
     text-transform: capitalize;
+    height:2.3rem;
+    margin-top: 0.7rem;
     /* padding-top: 0.4rem; */
     margin-bottom: 0.68rem;
     background-color: black;
