--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -86,7 +86,7 @@
 .button-container {
     margin-top: 0.8rem;
     width: 6rem;
-    height: 4.4vh;
+    height:2.3rem;
     border-radius: 1.2rem;
     margin-left: 1rem;
     background-color: #6f734c;
